@@ -1,3 +1,5 @@
+* #3063: Make the 'Keep' button in the activity toolbar create a copy of the
+  activity in the journal. Add a copy() method for activities to use. (tomeu)
 * #3045: Fix issues with the clipboard icons and palettes. (tomeu)
 * Get invites back to work in the UI. (marco)
 * Get the title on activity palette in the mesh to work. (marco)
